Updated to allow building with Gradle 5 & Java 11